--- a/p8105_hw6_bl2898.Rmd
+++ b/p8105_hw6_bl2898.Rmd
@@ -37,6 +37,10 @@ clean_df
 
 ## Problem 2
 ```{r}
+library(tidyverse)
+library(rnoaa)
+library(broom)
+
 weather_df = 
   rnoaa::meteo_pull_monitors(
     c("USW00094728"),
@@ -48,6 +52,39 @@ weather_df =
     tmin = tmin / 10,
     tmax = tmax / 10) %>%
   select(name, id, everything())
+
+
+dt <- data.frame(cbind(id = 1:nrow(weather_df),
+                       tmax = weather_df$tmax,
+                       tmin = weather_df$tmin))
+
+
+r_sqr <- NULL
+log_beta01 <- NULL
+for (i in 1:5000){
+  set.seed(i + 2021)
+  
+  boot_dt <- dt[sample(dt$id, replace = TRUE), ]
+  
+  lm_temp <- lm(tmax ~ tmin, data = boot_dt)
+  
+  r_sqr[i] <- as.numeric(broom::glance(lm_temp)[,1])
+  
+  beta0 <- as.numeric(broom::tidy(lm_temp)[1,2])
+  beta1 <- as.numeric(broom::tidy(lm_temp)[2,2])
+  log_beta01[i] <- log(beta0*beta1)
+  
+}
+
+#distribution
+hist(r_sqr)
+hist(log_beta01)
+
+#CI
+param1_CI <- quantile(r_sqr, probs= c(0.025,0.975))
+param1_CI
+param2_CI <- quantile(log_beta01, probs = c(0.025,0.975))
+param2_CI
 ```
 
 
